overflow fix

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ section {
   background: url(images/curly-bracket-left.svg);
   background-repeat: no-repeat;
   position: relative;
+  overflow: hidden;
 }
 
 .arrow {
@@ -104,8 +105,7 @@ section {
 }
 
 .bio {
-  width: 80%;
-  margin: 0 auto;
+  padding: 0 3em;
   position: relative;
 }
 .bio > * {
